TestRepo2/src/objects/Content_Description__c.object
<CustomObject>
    <fields>
        <fullName>Classification_Display__c</fullName>
        <formula>IF(INCLUDES(Classification__c, &quot;Spirits&quot;), IF(INCLUDES(Classification__c, &quot;Wine&quot;), &quot;Spirits;Wine&quot;, &quot;Spirits&quot;), IF(INCLUDES(Classification__c, &quot;Wine&quot;), &quot;Wine&quot;, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Spirits</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Content_ID_Low__c</fullName>
        <label>Content ID Low</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_ID__c</fullName>
        <label>Content ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Content_Version_Id_Low__c</fullName>
        <label>Content Version Id Low</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Version_Id__c</fullName>
        <label>Content Version Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Display__c</fullName>
        <formula>Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Image_Resolution_Display__c</fullName>
        <formula>TEXT(Image_Resolution__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Resolution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Resolution__c</fullName>
        <label>Image Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Innovation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Innovation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Video__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Video</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Matrix_Type_Display__c</fullName>
        <formula>Matrix_type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matrix Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matrix_type__c</fullName>
        <label>Matrix type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Display__c</fullName>
        <formula>IF(Portfolio__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portfolio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preview_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preview Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preview_Id__c</fullName>
        <description>Preview ID (attachment)</description>
        <label>Preview_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTS_Display__c</fullName>
        <formula>IF(RTS__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready to Serve</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready to Serve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TBA_Display__c</fullName>
        <formula>IF(TBA__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TBA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TBA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TBA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Display__c</fullName>
        <formula>Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uploaded_date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Uploaded date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Video_Id__c</fullName>
        <description>Brightcove video Id</description>
        <label>Video Id</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filesize__c</fullName>
        <description>Size of file</description>
        <inlineHelpText>Size of file</inlineHelpText>
        <label>filesize</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filesize_low__c</fullName>
        <description>Size of low quality file</description>
        <inlineHelpText>Size of low quality file</inlineHelpText>
        <label>filesize_low</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filetype__c</fullName>
        <label>filetype</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>share_link__c</fullName>
        <label>share_link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>share_link_low__c</fullName>
        <label>share link low</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Content Description</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Description__c</columns>
        <columns>Content_ID__c</columns>
        <columns>Content_Version_Id__c</columns>
        <columns>filetype__c</columns>
        <columns>Video_Id__c</columns>
        <columns>Is_Video__c</columns>
        <columns>filesize__c</columns>
        <columns>share_link__c</columns>
        <columns>Image_Resolution__c</columns>
        <columns>filesize_low__c</columns>
        <columns>Preview_Id__c</columns>
        <columns>Preview_Available__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Description__c</columns>
        <columns>Content_ID__c</columns>
        <columns>Content_Version_Id__c</columns>
        <columns>filetype__c</columns>
        <columns>Video_Id__c</columns>
        <columns>Is_Video__c</columns>
        <columns>filesize__c</columns>
        <columns>share_link__c</columns>
        <columns>Image_Resolution__c</columns>
        <columns>filesize_low__c</columns>
        <columns>Preview_Id__c</columns>
        <columns>Preview_Available__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Video__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Videos Only</label>
    </listViews>
    <listViews>
        <fullName>All_PIL_Linked</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Description__c</columns>
        <columns>filesize__c</columns>
        <columns>Content_ID__c</columns>
        <columns>Content_Version_Id__c</columns>
        <columns>filesize_low__c</columns>
        <columns>Content_ID_Low__c</columns>
        <columns>Content_Version_Id_Low__c</columns>
        <columns>share_link__c</columns>
        <columns>share_link_low__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Content_Version_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Content_ID_Low__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Content_Version_Id_Low__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All PIL Images Linked</label>
    </listViews>
    <listViews>
        <fullName>Hi_Res_Lo_Res_Clean_Up</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Image_Resolution__c</columns>
        <columns>filetype__c</columns>
        <columns>Content_ID__c</columns>
        <columns>Content_Version_Id__c</columns>
        <columns>Description__c</columns>
        <columns>filesize__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Image_Resolution__c</field>
            <operation>equals</operation>
            <value>High</value>
        </filters>
        <filters>
            <field>Image_Resolution__c</field>
            <operation>equals</operation>
            <value>Low</value>
        </filters>
        <label>Hi Res Lo Res Clean Up</label>
    </listViews>
    <nameField>
        <label>Content Description Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Descriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Classification_required_for_portfolio</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Portfolio__c , ISNULL( Classification__c) , false)</errorConditionFormula>
        <errorMessage>Classification field is required for portfolio documents.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Description_required</fullName>
        <active>false</active>
        <description>Description is required field</description>
        <errorConditionFormula>ISBLANK(Description__c)</errorConditionFormula>
        <errorMessage>Description is required field</errorMessage>
    </validationRules>
</CustomObject>